--- a/src/features/counter/Counter.module.css
+++ b/src/features/counter/Counter.module.css
@@ -40,7 +40,7 @@
 .textbox {
   font-size: 32px;
   padding: 2px;
-  width: 64px;
+  width: 100px;
   text-align: center;
   margin-right: 4px;
 }
@@ -76,4 +76,17 @@
   width: 0%;
   opacity: 1;
   transition: 0s;
+}
+
+
+.loading{
+  background-color: rgba(0, 0, 0, 0.152);
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
