--- a/src/pokemon/pokemon.module.css
+++ b/src/pokemon/pokemon.module.css
@@ -19,3 +19,23 @@
 .img{
 
 }
+
+.loading{
+    background-color: rgba(0, 0, 0, 0.152);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .search{
+      width: 300px;
+      height: 35px;
+      margin-top:20px;
+      margin-bottom: 10px;
+      padding-left: 10px;
+  }
